fixed overlapping commits on my part sorry 😭

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -34,229 +34,6 @@ html, body{
   overflow-x: hidden;
 }
 
-/* Navbar CSS */
-#navbar{
-  background-color: #B2D8D8;
-}
-
-#searchbar{
-  width: 40rem;
-  background-color: #B2D8D8;
-  font-style: black;
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-  border-bottom-left-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-}
-
-#navbarbox{
-  background-color: white;
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-  border-bottom-left-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-
-  -webkit-box-shadow: -1px 2px 50px -15px rgba(0,0,0,0.85);
-  -moz-box-shadow: -1px 2px 50px -15px rgba(0,0,0,0.85);
-  box-shadow: -1px 2px 50px -15px rgba(0,0,0,0.85);
-}
-/* Navbar CSS */
-
-/* Footer CSS */
-
-/* #footer{
-  display: flex;
-  position: relative;
-} */
-
-#footer-text{
-  padding-left: 25rem;
-}
-
-/* Footer CSS */
-
-/* Login Screen CSS */
-#bgimg{
-  background: #84fab0;
-  background-size: cover;
-  background-attachment: fixed;
-  background-repeat: repeat;
-  height: 63rem;
-  font-family: 'Roboto', sans-serif;
-}
-
-#cardcolor{
-  background-color: bisque; 
-  height: 29rem;
-  width: 34rem;
-}
-
-#loginbutton{
-  background-color: brown;
-}
-
-#form{
-  border-top-left-radius: 2rem;
-  border-top-right-radius: 2rem;
-  border-bottom-left-radius: 2rem;
-  border-bottom-right-radius: 2rem;
-}
-/* Login Screen CSS */
-
-/* Homescreen CSS */
-#section-1{
-  background-color: #B2D8D8;
-  height: 60rem;
-}
-
-#slogan-container { /*background of homescreen*/
-  min-height: 70vh;
-  padding-right: 12rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.title { /* the title of homescreen */
-  padding-left: 12rem;
-  font-size: 8.75rem;
-  margin-right: 1.875rem;
-  font-family: 'Russo One', sans-serif;
-	font-weight: 500; 
-}
-
-.title-2 { /* the title of homescreen */
-  padding-left: 12rem;
-  font-size: 1.875rem;
-  margin-right: 1.875rem;
-  font-family: 'Russo One', sans-serif;
-	font-weight: 200;
-}
-/* Homescreen CSS */
-
-/* Question box CSS */
-.question-container {
-	display: block;
-	width: 43.75rem;
-  height: 35.625rem;
-	margin: 0 auto;
-  background-color: white;
-  padding-top: 1.875rem;
-	padding-left: 1.25rem;
-  padding-right: 1.25rem;
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-  border-bottom-left-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-	margin-bottom: 3.125rem;
-
-  -webkit-box-shadow: -1px 6px 50px -5px rgba(0,0,0,0.75);
-  -moz-box-shadow: -1px 6px 50px -5px rgba(0,0,0,0.75);
-  box-shadow: -1px 6px 50px -5px rgba(0,0,0,0.75);
-}
-
-#question-field{
-  width: 40.938rem;
-  height: 28.125rem;
-	padding-top: 1.875rem;
-	padding-bottom: 21.875rem; 
-  padding-left: 0.625rem;
-	background-color: #B2D8D8;
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-  border-bottom-left-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-  min-height: 8.125rem;
-	font-size: 1.25rem;
-  font-family: 'Russo One', sans-serif;
-	font-weight: 500;
-}
-
-#submit-btn{
-	margin-top: 0.625rem;
-	width: 50%;
-	padding-top: 0.625rem;
-	padding-bottom: 0.625rem;
-	color: #fff;
-	background-color: black;
-	border: none;
-  margin-left: 20.5rem;
-}
-
-
-  p {
-    color: #555;
-  }
-
-  .subject {
-    font-size: 1.2em; /* subject bar adjust the font size of the text */
-  }
-
-  .subject img { /*makes the subject bar images same size */
-    width: auto; 
-    height: 2em; 
-    margin-right: 5px; 
-  }
-  
-/* Question box CSS */
-
-/* Subject Bar CSS */
-#subbar-container{
-  padding: 4rem;
-  align-items: center;
-  justify-content: center;
-  background-color: white;
-  width: 116.563rem;
-  height: 10rem;
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-  border-bottom-left-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-
-  -webkit-box-shadow: -1px 2px 50px -15px rgba(0,0,0,0.85);
-  -moz-box-shadow: -1px 2px 50px -15px rgba(0,0,0,0.85);
-  box-shadow: -1px 2px 50px -15px rgba(0,0,0,0.85);
-}
-
-/* Subject Bar CSS */
-
-/* Profile Css */
-
-#profile-section{
-  background-color: #B2D8D8;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-  height: fit-content;
-  height: 85.3vh;
-}
-
-#profile-container{
-  width: 80%;
-  height: fit-content;
-  padding: 2rem;
-  background: #B2D8D8 ;
-  background-color: white;
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-  border-bottom-left-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-
-  -webkit-box-shadow: -1px 2px 50px -15px rgba(0,0,0,0.85);
-  -moz-box-shadow: -1px 2px 50px -15px rgba(0,0,0,0.85);
-  box-shadow: -1px 2px 50px -15px rgba(0,0,0,0.85);
-}
-
-.profile-picture { /*pfp size*/
-  width: 5rem; 
-  height: 5rem; 
-  border-radius: 100%;
-  border-style: solid;
-  border-color: #B2D8D8;
-  margin-bottom: 0.625rem;
-}
-
-/* Profile Css */
-
 @media screen and (max-width: 1200px){
 	#slogan-container{
 		width: 95%;
